# Atsiitsiin

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  schemas.sql
backend/app/: main.py
backend/app/api/routes/: health.py  notes.py
backend/app/core/: config.py
backend/app/schemas/: notes.py
backend/app/services/: memory.py  sentiment.py
docs/: DATABASE_SCHEMA.md  SCALING_PLAN.md
examples/: init_schema.py  run_atsiitsiin.py
frontend/: streamlit_app.py
migrations/: move_public_to_atsiitsiin.py  move_public_to_atsiitsiin.sql
pipelines/: README.md  sentiment.py  sentiment.sql
src/atsiitsiin/: __init__.py
src/atsiitsiin/agents/: __init__.py  agent.py  tools.py
src/atsiitsiin/config/: __init__.py
src/atsiitsiin/integrations/snowflake/: __init__.py  config.py  connection.py
src/atsiitsiin/memory/: __init__.py  embeddings.py  ingest.py  retrieval.py  store.py
src/atsiitsiin/pipelines/: sentiment.py  tagging.py
tests/: test_memory_store.py
